Responsividade Numerico e Prancha

--- a/produto-numerico.html
+++ b/produto-numerico.html
@@ -135,7 +135,7 @@
                 </div>
                     
                     <div class="caracteristicas">
-                        <div class="strong-title">
+                        <div class="strong-title2">
                             <strong>Características</strong><br><br>
                         </div>
                     <div class="caracteristicas-col">
